--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ repositories {
 
 dependencies {
     testImplementation group: 'org.testng', name: 'testng', version: '7.1.0'
+    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
+}
 
-    testRuntimeOnly group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
+test {
+    useTestNG()
 }
